poprawa luk bezpieczeństwa oraz poprawa wyglądu metod