@@ -1,14 +1,12 @@
 package pl.edu.ur.blokur.service;
 
 import java.nio.file.Files;
-import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.time.LocalDate;
 import java.time.LocalDateTime;
 import java.util.List;
 import java.util.Map;
 import java.util.UUID;
-import java.util.stream.Collectors;
 import org.springframework.boot.context.event.ApplicationReadyEvent;
 import org.springframework.context.event.EventListener;
 import org.springframework.stereotype.Service;
@@ -25,14 +23,11 @@ import pl.edu.ur.blokur.dto.TicketSuspendRequest;
 import pl.edu.ur.blokur.dto.WorkAcceptanceProtocolRequest;
 import pl.edu.ur.blokur.exception.BusinessValidationException;
 import pl.edu.ur.blokur.exception.NotFoundException;
-import pl.edu.ur.blokur.models.Apartment;
 import pl.edu.ur.blokur.models.Document;
 import pl.edu.ur.blokur.models.Ticket;
-import pl.edu.ur.blokur.models.TicketCategory;
 import pl.edu.ur.blokur.models.TicketHistory;
 import pl.edu.ur.blokur.models.TicketStatus;
 import pl.edu.ur.blokur.models.User;
-import pl.edu.ur.blokur.models.UserApartment;
 import pl.edu.ur.blokur.repository.DocumentRepository;
 import pl.edu.ur.blokur.repository.TicketCategoryRepository;
 import pl.edu.ur.blokur.repository.TicketHistoryRepository;
@@ -78,14 +73,14 @@ public class TicketService {
 
     @EventListener(ApplicationReadyEvent.class)
     public void initTicketNumberGenerator() {
-        int year = LocalDate.now().getYear();
-        int lastSeq = ticketRepository.findMaxSequenceForYear(year);
+        var year = LocalDate.now().getYear();
+        var lastSeq = ticketRepository.findMaxSequenceForYear(year);
         ticketNumberGenerator.initYear(year, lastSeq);
     }
 
     @Transactional
     public TicketDetailDto create(TicketRequest request, String username) {
-        User author =
+        var author =
                 userRepository
                         .findByEmail(username)
                         .orElseThrow(() -> new NotFoundException("Użytkownik nie istnieje"));
@@ -95,9 +90,9 @@ public class TicketService {
                     "Mieszkaniec nie ma przypisanego lokalu — nie można złożyć zgłoszenia");
         }
 
-        Apartment apartment = author.getUserApartments().get(0).getApartment();
+        var apartment = author.getUserApartments().get(0).getApartment();
 
-        TicketCategory category =
+        var category =
                 ticketCategoryRepository
                         .findById(request.getCategoryId())
                         .orElseThrow(
@@ -107,7 +102,7 @@ public class TicketService {
                                                         + request.getCategoryId()
                                                         + " nie istnieje"));
 
-        Ticket ticket = new Ticket();
+        var ticket = new Ticket();
         ticket.setTicketNumber(ticketNumberGenerator.generate());
         ticket.setTitle(request.getTitle());
         ticket.setDescription(request.getDescription());
@@ -122,12 +117,12 @@ public class TicketService {
 
     @Transactional(readOnly = true)
     public List<TicketSummaryDto> getAll(String username, TicketFilterParams filters) {
-        User user =
+        var user =
                 userRepository
                         .findByEmail(username)
                         .orElseThrow(() -> new NotFoundException("Użytkownik nie istnieje"));
 
-        String role = user.getRole();
+        var role = user.getRole();
 
         if ("ZARZADCA".equals(role)) {
             return ticketRepository
@@ -142,7 +137,7 @@ public class TicketService {
                             filters.getSearch())
                     .stream()
                     .map(this::mapRawToSummary)
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         if ("KONSERWATOR".equals(role)) {
@@ -156,19 +151,19 @@ public class TicketService {
                             filters.getSearch())
                     .stream()
                     .map(this::mapRawToSummary)
-                    .collect(Collectors.toList());
+                    .toList();
         }
 
         if (user.getUserApartments().isEmpty()) {
             return List.of();
         }
 
-        UserApartment ua = user.getUserApartments().get(0);
-        Apartment apt = ua.getApartment();
-        UUID apartmentId = apt != null ? apt.getId() : null;
-        UUID staircaseId =
+        var ua = user.getUserApartments().get(0);
+        var apt = ua.getApartment();
+        var apartmentId = apt != null ? apt.getId() : null;
+        var staircaseId =
                 (apt != null && apt.getStaircase() != null) ? apt.getStaircase().getId() : null;
-        UUID buildingId =
+        var buildingId =
                 (apt != null
                                 && apt.getStaircase() != null
                                 && apt.getStaircase().getBuilding() != null)
@@ -191,12 +186,12 @@ public class TicketService {
                         filters.getSearch())
                 .stream()
                 .map(this::mapRawToSummary)
-                .collect(Collectors.toList());
+                .toList();
     }
 
     @Transactional(readOnly = true)
     public TicketDetailDto getById(UUID ticketId, String username) {
-        Ticket ticket =
+        var ticket =
                 ticketRepository
                         .findById(ticketId)
                         .orElseThrow(
@@ -204,12 +199,12 @@ public class TicketService {
                                         new NotFoundException(
                                                 "Zgłoszenie o ID " + ticketId + " nie istnieje"));
 
-        User user =
+        var user =
                 userRepository
                         .findByEmail(username)
                         .orElseThrow(() -> new NotFoundException("Użytkownik nie istnieje"));
 
-        String role = user.getRole();
+        var role = user.getRole();
 
         if ("ZARZADCA".equals(role)) {
             return mapToDetail(ticket);
@@ -229,11 +224,11 @@ public class TicketService {
                     "Brak dostępu do zgłoszenia — mieszkaniec nie ma przypisanego lokalu");
         }
 
-        Apartment apt = user.getUserApartments().get(0).getApartment();
-        UUID residentApartmentId = apt != null ? apt.getId() : null;
-        UUID residentStaircaseId =
+        var apt = user.getUserApartments().get(0).getApartment();
+        var residentApartmentId = apt != null ? apt.getId() : null;
+        var residentStaircaseId =
                 (apt != null && apt.getStaircase() != null) ? apt.getStaircase().getId() : null;
-        UUID residentBuildingId =
+        var residentBuildingId =
                 (apt != null
                                 && apt.getStaircase() != null
                                 && apt.getStaircase().getBuilding() != null)
@@ -249,7 +244,7 @@ public class TicketService {
                     "Brak dostępu do zgłoszenia — nie dotyczy lokalu tego mieszkańca");
         }
 
-        TicketDetailDto dto = mapToDetail(ticket);
+        var dto = mapToDetail(ticket);
         dto.setInternalNote(null);
         return dto;
     }
@@ -266,11 +261,11 @@ public class TicketService {
     @Transactional
     public TicketDetailDto assignTicket(
             UUID ticketId, TicketAssignRequest request, String username) {
-        Ticket ticket =
+        var ticket =
                 ticketRepository
                         .findById(ticketId)
                         .orElseThrow(() -> new NotFoundException("Zgłoszenie nie istnieje"));
-        User manager =
+        var manager =
                 userRepository
                         .findByEmail(username)
                         .orElseThrow(() -> new NotFoundException("Użytkownik nie istnieje"));
@@ -280,7 +275,7 @@ public class TicketService {
                     "Brak uprawnień. Tylko zarządca może przypisać konserwatora.");
         }
 
-        User conservator =
+        var conservator =
                 userRepository
                         .findById(request.getAssignedTo())
                         .orElseThrow(() -> new NotFoundException("Konserwator nie istnieje"));
@@ -301,7 +296,7 @@ public class TicketService {
         history.setCreatedAt(LocalDateTime.now());
         ticketHistoryRepository.save(history);
 
-        TicketDetailDto result = mapToDetail(ticketRepository.save(ticket));
+        var result = mapToDetail(ticketRepository.save(ticket));
         if (ticket.getAuthor() != null) {
             pushNotificationService.send(
                     ticket.getAuthor().getId(),
@@ -323,11 +318,11 @@ public class TicketService {
      */
     @Transactional
     public TicketDetailDto closeTicket(UUID ticketId, String username) {
-        Ticket ticket =
+        var ticket =
                 ticketRepository
                         .findById(ticketId)
                         .orElseThrow(() -> new NotFoundException("Zgłoszenie nie istnieje"));
-        User manager =
+        var manager =
                 userRepository
                         .findByEmail(username)
                         .orElseThrow(() -> new NotFoundException("Użytkownik nie istnieje"));
@@ -344,17 +339,17 @@ public class TicketService {
         }
 
         // Generowanie PDF
-        String conservatorName =
+        var conservatorName =
                 ticket.getAssignedTo() != null
                         ? ticket.getAssignedTo().getFirstName()
                                 + " "
                                 + ticket.getAssignedTo().getLastName()
                         : "Nieznany";
-        String descriptionToPdf =
+        var descriptionToPdf =
                 ticket.getWorkDescription() != null
                         ? ticket.getWorkDescription()
                         : ticket.getDescription();
-        List<String> beforeImages =
+        var beforeImages =
                 ticket.getImages().stream()
                         .filter(
                                 img ->
@@ -362,7 +357,7 @@ public class TicketService {
                                                 == pl.edu.ur.blokur.models.TicketImageType.BEFORE)
                         .map(pl.edu.ur.blokur.models.TicketImage::getFilePath)
                         .toList();
-        List<String> afterImages =
+        var afterImages =
                 ticket.getImages().stream()
                         .filter(
                                 img ->
@@ -371,7 +366,7 @@ public class TicketService {
                         .map(pl.edu.ur.blokur.models.TicketImage::getFilePath)
                         .toList();
 
-        WorkAcceptanceProtocolRequest pdfRequest =
+        var pdfRequest =
                 new WorkAcceptanceProtocolRequest(
                         ticket.getTicketNumber(),
                         descriptionToPdf,
@@ -381,20 +376,20 @@ public class TicketService {
 
         try {
             byte[] pdfBytes = pdfGeneratorService.generateWorkAcceptanceProtocol(pdfRequest);
-            Path dirPath = Paths.get("uploads/documents");
+            var dirPath = Paths.get("uploads/documents");
             if (!Files.exists(dirPath)) {
                 Files.createDirectories(dirPath);
             }
-            String fileName =
+            var fileName =
                     "protokol-"
                             + ticket.getTicketNumber()
                             + "-"
                             + System.currentTimeMillis()
                             + ".pdf";
-            Path filePath = dirPath.resolve(fileName);
+            var filePath = dirPath.resolve(fileName);
             Files.write(filePath, pdfBytes);
 
-            Document document = new Document();
+            var document = new Document();
             document.setType("PROTOKOL");
             document.setTitle("Protokół odbioru - " + ticket.getTicketNumber());
             document.setFileUrl(filePath.toString());
@@ -408,16 +403,16 @@ public class TicketService {
         ticket.setStatus(TicketStatus.ZAMKNIETE);
         ticket.setClosedAt(LocalDateTime.now());
 
-        TicketHistory history = new TicketHistory();
+        var history = new TicketHistory();
         history.setTicket(ticket);
         history.setStatus("ZAMKNIETE");
         history.setChangedBy(manager);
         history.setCreatedAt(LocalDateTime.now());
         ticketHistoryRepository.save(history);
 
-        TicketDetailDto result = mapToDetail(ticketRepository.save(ticket));
+        var result = mapToDetail(ticketRepository.save(ticket));
         if (ticket.getAuthor() != null) {
-            UUID authorId = ticket.getAuthor().getId();
+            var authorId = ticket.getAuthor().getId();
             pushNotificationService.send(
                     authorId,
                     PushNotificationService.EVENT_ZMIANA_STATUSU,
@@ -437,11 +432,11 @@ public class TicketService {
     @Transactional
     public TicketDetailDto rejectTicket(
             UUID ticketId, TicketRejectRequest request, String username) {
-        Ticket ticket =
+        var ticket =
                 ticketRepository
                         .findById(ticketId)
                         .orElseThrow(() -> new NotFoundException("Zgłoszenie nie istnieje"));
-        User manager =
+        var manager =
                 userRepository
                         .findByEmail(username)
                         .orElseThrow(() -> new NotFoundException("Użytkownik nie istnieje"));
@@ -451,13 +446,12 @@ public class TicketService {
                     "Brak uprawnień. Tylko zarządca może odrzucić zgłoszenie.");
         }
 
-        String currentNote =
-                ticket.getInternalNote() != null ? ticket.getInternalNote() + "\n" : "";
+        var currentNote = ticket.getInternalNote() != null ? ticket.getInternalNote() + "\n" : "";
         ticket.setInternalNote(currentNote + "Powód odrzucenia: " + request.getReason());
 
         ticket.setStatus(TicketStatus.ODRZUCONE);
 
-        TicketHistory history = new TicketHistory();
+        var history = new TicketHistory();
         history.setTicket(ticket);
         history.setStatus("ODRZUCONE");
         history.setChangedBy(manager);
@@ -479,11 +473,11 @@ public class TicketService {
 
     @Transactional
     public TicketDetailDto startWork(UUID ticketId, String username) {
-        Ticket ticket =
+        var ticket =
                 ticketRepository
                         .findById(ticketId)
                         .orElseThrow(() -> new NotFoundException("Zgłoszenie nie istnieje"));
-        User conservator =
+        var conservator =
                 userRepository
                         .findByEmail(username)
                         .orElseThrow(() -> new NotFoundException("Użytkownik nie istnieje"));
@@ -506,14 +500,14 @@ public class TicketService {
 
         ticket.setStatus(TicketStatus.W_REALIZACJI);
 
-        TicketHistory history = new TicketHistory();
+        var history = new TicketHistory();
         history.setTicket(ticket);
         history.setStatus("W_REALIZACJI");
         history.setChangedBy(conservator);
         history.setCreatedAt(LocalDateTime.now());
         ticketHistoryRepository.save(history);
 
-        TicketDetailDto result = mapToDetail(ticketRepository.save(ticket));
+        var result = mapToDetail(ticketRepository.save(ticket));
         if (ticket.getAuthor() != null) {
             pushNotificationService.send(
                     ticket.getAuthor().getId(),
@@ -528,11 +522,11 @@ public class TicketService {
     @Transactional
     public TicketDetailDto suspendWork(
             UUID ticketId, TicketSuspendRequest request, String username) {
-        Ticket ticket =
+        var ticket =
                 ticketRepository
                         .findById(ticketId)
                         .orElseThrow(() -> new NotFoundException("Zgłoszenie nie istnieje"));
-        User conservator =
+        var conservator =
                 userRepository
                         .findByEmail(username)
                         .orElseThrow(() -> new NotFoundException("Użytkownik nie istnieje"));
@@ -555,11 +549,10 @@ public class TicketService {
 
         ticket.setStatus(TicketStatus.WSTRZYMANO);
 
-        String currentNote =
-                ticket.getInternalNote() != null ? ticket.getInternalNote() + "\n" : "";
+        var currentNote = ticket.getInternalNote() != null ? ticket.getInternalNote() + "\n" : "";
         ticket.setInternalNote(currentNote + "Wstrzymano prace: " + request.getReason());
 
-        TicketHistory history = new TicketHistory();
+        var history = new TicketHistory();
         history.setTicket(ticket);
         history.setStatus("WSTRZYMANO");
         history.setChangedBy(conservator);
@@ -567,9 +560,9 @@ public class TicketService {
         history.setCreatedAt(LocalDateTime.now());
         ticketHistoryRepository.save(history);
 
-        TicketDetailDto result = mapToDetail(ticketRepository.save(ticket));
+        var result = mapToDetail(ticketRepository.save(ticket));
         // Powiadomienie zarządców o wstrzymaniu zgłoszenia
-        List<UUID> managerIds = userRepository.findManagerIds();
+        var managerIds = userRepository.findManagerIds();
         pushNotificationService.sendToUsers(
                 managerIds,
                 PushNotificationService.EVENT_WSTRZYMANIE,
@@ -585,11 +578,11 @@ public class TicketService {
     @Transactional
     public TicketDetailDto completeWork(
             UUID ticketId, TicketCompletionRequest request, String username) {
-        Ticket ticket =
+        var ticket =
                 ticketRepository
                         .findById(ticketId)
                         .orElseThrow(() -> new NotFoundException("Zgłoszenie nie istnieje"));
-        User conservator =
+        var conservator =
                 userRepository
                         .findByEmail(username)
                         .orElseThrow(() -> new NotFoundException("Użytkownik nie istnieje"));
@@ -613,16 +606,16 @@ public class TicketService {
         ticket.setStatus(TicketStatus.ZAKONCZONE_DO_WERYFIKACJI);
         ticket.setWorkDescription(request.getWorkDescription());
 
-        TicketHistory history = new TicketHistory();
+        var history = new TicketHistory();
         history.setTicket(ticket);
         history.setStatus("ZAKONCZONE_DO_WERYFIKACJI");
         history.setChangedBy(conservator);
         history.setCreatedAt(LocalDateTime.now());
         ticketHistoryRepository.save(history);
 
-        TicketDetailDto result = mapToDetail(ticketRepository.save(ticket));
+        var result = mapToDetail(ticketRepository.save(ticket));
         // Powiadomienie zarządców o gotowości zgłoszenia do weryfikacji
-        List<UUID> managerIds = userRepository.findManagerIds();
+        var managerIds = userRepository.findManagerIds();
         pushNotificationService.sendToUsers(
                 managerIds,
                 PushNotificationService.EVENT_ZMIANA_STATUSU,
@@ -639,11 +632,11 @@ public class TicketService {
     @Transactional
     public TicketDetailDto changeStatus(
             UUID ticketId, TicketStatusChangeRequest request, String username) {
-        Ticket ticket =
+        var ticket =
                 ticketRepository
                         .findById(ticketId)
                         .orElseThrow(() -> new NotFoundException("Zgłoszenie nie istnieje"));
-        User user =
+        var user =
                 userRepository
                         .findByEmail(username)
                         .orElseThrow(() -> new NotFoundException("Użytkownik nie istnieje"));
@@ -658,7 +651,7 @@ public class TicketService {
             throw new BusinessValidationException("Brak uprawnień do zmiany statusu zgłoszenia");
         }
 
-        TicketStatus newStatus = request.getStatus();
+        var newStatus = request.getStatus();
         ticketStateMachine.validateTransition(ticket.getStatus(), newStatus);
 
         recordStatusChange(ticket, newStatus, user, request.getComment());
@@ -673,7 +666,7 @@ public class TicketService {
             ticket.setClosedAt(LocalDateTime.now());
         }
 
-        TicketHistory history = new TicketHistory();
+        var history = new TicketHistory();
         history.setTicket(ticket);
         history.setStatus(newStatus.name());
         history.setChangedBy(changedBy);
@@ -700,7 +693,7 @@ public class TicketService {
     }
 
     private TicketDetailDto mapToDetail(Ticket ticket) {
-        TicketDetailDto dto = new TicketDetailDto();
+        var dto = new TicketDetailDto();
         dto.setId(ticket.getId());
         dto.setTicketNumber(ticket.getTicketNumber());
         dto.setTitle(ticket.getTitle());
@@ -740,7 +733,7 @@ public class TicketService {
     }
 
     private TicketSummaryDto mapRawToSummary(Object[] row) {
-        TicketSummaryDto dto = new TicketSummaryDto();
+        var dto = new TicketSummaryDto();
         dto.setId(row[0] != null ? UUID.fromString(row[0].toString()) : null);
         dto.setTicketNumber(row[1] != null ? row[1].toString() : null);
         dto.setTitle(row[2] != null ? row[2].toString() : null);
